# 3dv_tutorial_ceres_mpc

./: CMakeLists.txt  README.md
examples/: bundle_adjustment_global.cpp  bundle_adjustment_inc.cpp  camera_calibration.cpp  ceres_mpc.cpp  ceres_tut1.cpp  ceres_tut2.cpp  ceres_tut3.cpp  distortion_correction.cpp  image_formation.cpp  image_stitching.cpp  line_fitting_m_estimation.cpp  line_fitting_ransac.cpp  object_localization.cpp  object_localization_new.cpp  perspective_correction.cpp  pose_estimation_book1.cpp  pose_estimation_book2.cpp  pose_estimation_book3.cpp  pose_estimation_chessboard.cpp  sfm.hpp  sfm_global.cpp  sfm_inc.cpp  test_undistort_fisheye.cpp  triangulation.cpp  triangulation.py  video_stabilization.cpp  vo_epipolar.cpp
